--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>About</title>
+	<title>About 3</title>
 </head>
 <body>
 	<p>This is about page of my blog<a href="index.html">Index</a></p>
